Fix z-index on filters on mobile

--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -41,39 +41,4 @@
             margin-bottom: $padding;
         }
     }
-
-    #filters {
-        @media screen and (max-width: 992px) {
-            background-color: $white;
-            border: 5px solid $medium-gray;
-            box-shadow: 0 0 10px rgba(0,0,0,0.15);
-            display: none;
-            max-width: 544px;
-            padding: $padding/2;
-            position: absolute;
-            top: 75px;
-            width: 100%;
-
-            &.open {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-
-                .filter {
-                    flex-basis: 48%;
-                }
-            }
-        }
-
-        @include respond-to('x-small') {
-            &.open {
-                flex-direction: column;
-                flex-wrap: nowrap;
-
-                .filter {
-                    flex-basis: 100%;
-                }
-            }
-        }
-    }
 }
